# fracdiff

./: .gitignore  .travis.yml  README.md  pyproject.toml  test.sh
.github/ISSUE_TEMPLATE/: BUG.md  CI.md  DOC.md  ENH.md  GITHUB.md  REF.md  TEST.md  moved.md
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  index.html
fracdiff/: __init__.py  base.py  fracdiff.py  fracdiffstat.py  stat.py  tol.py
sample/howto/: nky.py  spx.py
tests/: test_fdiff.py  test_fracdiff.py  test_fracdiffstat.py  test_howto.py  test_sklearn.py  test_stat.py  test_tol.py
tests/issues/: test_32.py
