[tool.poetry]
name = "fracdiff"
version = "0.2.1"
description = "Fractional differentiation of time-series."
homepage = "https://github.com/simaki/fracdiff"
repository = "https://github.com/simaki/fracdiff"
authors = ["Shota Imaki <shota.imaki@icloud.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.0"
scikit-learn = "^0.23.0"
statsmodels = "^0.12.0"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
codecov = "^2.0.15"
flake8 = "^3.7.9"
matplotlib = "^3.1.2"
pandas = "^0.25.3"
pandas_datareader = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
