[tool.poetry]
name = "fracdiff"
version = "0.2.6"
description = "Compute fractional differentiation super-fast."
authors = ["Shota Imaki <shota.imaki@icloud.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/simaki/fracdiff"

[tool.poetry.dependencies]
python = "^3.6.13"
numpy = "^1.18.0"
scikit-learn = "^0.24.0"
statsmodels = "^0.12.0"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.8.1"
codecov = "^2.1.11"
flake8 = "^3.7.9"
matplotlib = "^3.3.4"
pandas = "^1.1.5"
pandas_datareader = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
force_single_line = true
